--- a/src/app/modules/borrower-information/borrower-information.component.html
+++ b/src/app/modules/borrower-information/borrower-information.component.html
@@ -26,7 +26,7 @@
             <div [formGroup]="borrowerForm">
 
                 <div class="flex mt-1" style="flex-wrap: wrap;">
-                    <app-zone-branch-circle [form]="borrowerForm" [should_show_circle]="true"
+                    <app-zone-branch-circle [form]="borrowerForm" [show_circle]="true"
                                             (branchZoneCircleData)="getAllData($event)"></app-zone-branch-circle>
 
                     <div class="mx-2">
