--- a/src/app/modules/customer/correction-passbook/correction-passbook.component.html
+++ b/src/app/modules/customer/correction-passbook/correction-passbook.component.html
@@ -25,7 +25,7 @@
             <div class="flex" style="flex-wrap: wrap;">
 
 
-                <app-zone-branch-circle [form]="cpForm" [should_show_circle]="false"
+                <app-zone-branch-circle [form]="cpForm" [show_circle]="false"
                                         [is_required_circle]="false"
                                         (branchZoneCircleData)="getAllData($event)"></app-zone-branch-circle>
 
@@ -55,7 +55,7 @@
     <div class="relative flex overflow-x-hidden  flex-col sm:flex-row flex-0 sm:items-center sm:justify-between px-6 md:px-8"
          style="flex-wrap: wrap">
     </div>
-    <div class="flex flex-auto border 
+    <div class="flex flex-auto border
     overflow-x-hidden"
     style="flex-direction: column; overflow-y: auto">
 
