--- a/src/app/modules/customer/correction-phone/correction-phone.component.html
+++ b/src/app/modules/customer/correction-phone/correction-phone.component.html
@@ -29,7 +29,7 @@
                 <!-- <kt-alert *ngIf="hasFormErrors" class="col-lg-12" type="warn" [duration]="30000" [showCloseButton]="true" (close)="onAlertClose($event)">
                   Please enter valid Input
                 </kt-alert> -->
-                <app-zone-branch-circle [should_show_circle]="false" [form]="cpForm"
+                <app-zone-branch-circle [show_circle]="false" [form]="cpForm"
                                         (branchZoneCircleData)="getAllData($event)"></app-zone-branch-circle>
                 <div class="flex flex-shrink-0 items-center mt-6 sm:mt-0 mx-2" style="width: 225px;">
                     <mat-form-field class="mat-form-field-fluid w-full" appearance="outline">
