--- a/src/app/modules/customer/customer-profile/customer-profile.component.html
+++ b/src/app/modules/customer/customer-profile/customer-profile.component.html
@@ -42,7 +42,7 @@
 
                             </div>
                             <div class="flex" style="flex-wrap: wrap;">
-                                <app-zone-branch-circle [should_show_circle]="false" [should_filter]="false"
+                                <app-zone-branch-circle [show_circle]="false" [should_filter]="false"
                                                         [form]="roleForm"
                                                         (branchZoneCircleData)="getAllData($event)"></app-zone-branch-circle>
                                 <div class="flex flex-shrink-0 items-center mt-6 sm:mt-0 mx-2" style="width: 225px;">
