--- a/src/app/modules/deceased-customer/search-deceased/search-deceased.component.html
+++ b/src/app/modules/deceased-customer/search-deceased/search-deceased.component.html
@@ -27,7 +27,7 @@
 
 
                     <div class="flex" style="flex-wrap: wrap;">
-                        <app-zone-branch-circle [form]="deceasedCustomerSearch" [should_show_circle]="false"
+                        <app-zone-branch-circle [form]="deceasedCustomerSearch" [show_circle]="false"
                                                 (branchZoneCircleData)="getAllData($event)"></app-zone-branch-circle>
                         <div class="mx-2">
                             <div class="flex flex-shrink-0 items-center mt-6 sm:mt-0" style="width: 225px;">
