--- a/src/app/modules/geo-fencing/geo-fencing-list/geo-fencing-list.component.html
+++ b/src/app/modules/geo-fencing/geo-fencing-list/geo-fencing-list.component.html
@@ -29,7 +29,7 @@
                 <div class="sm:flex grid" style="flex-wrap: wrap;">
 
                     <div>
-                        <app-zone-branch-circle [form]="listForm" [should_show_circle]="true"
+                        <app-zone-branch-circle [form]="listForm" [show_circle]="true"
                                                 (branchZoneCircleData)="getAllData($event)"></app-zone-branch-circle>
                     </div>
                     <div class="mx-2">
