--- a/src/app/modules/loan-recovery/loan-inquiry/loan-inquiry.component.html
+++ b/src/app/modules/loan-recovery/loan-inquiry/loan-inquiry.component.html
@@ -8,7 +8,7 @@
         <div class="card card-body">
             <div class="py-2" [formGroup]="RecoveryForm">
                 <div class="flex" style="flex-wrap: wrap;">
-                    <app-zone-branch-circle [form]="RecoveryForm" [should_show_circle]="false"
+                    <app-zone-branch-circle [form]="RecoveryForm" [show_circle]="false"
                                             (branchZoneCircleData)="getAllData($event)"></app-zone-branch-circle>
 
                     <div class="mx-2">
