--- a/src/app/modules/loan-utilization/search-loan-uti/search-loan-uti.component.html
+++ b/src/app/modules/loan-utilization/search-loan-uti/search-loan-uti.component.html
@@ -26,7 +26,7 @@
 
 
                 <div class="flex" style="flex-wrap: wrap;">
-                    <app-zone-branch-circle [form]="loanutilizationSearch" [should_show_circle]="true"
+                    <app-zone-branch-circle [form]="loanutilizationSearch" [show_circle]="true"
                                             (branchZoneCircleData)="getAllData($event)"></app-zone-branch-circle>
                     <div class="mx-2" style="width: 225px;">
                         <mat-form-field class="mat-form-field-fluid w-full" appearance="outline">
