--- a/src/app/modules/loan/cl-upload-document/cl-upload-document.component.html
+++ b/src/app/modules/loan/cl-upload-document/cl-upload-document.component.html
@@ -14,7 +14,7 @@
         </div>
 
         <div class="flex mt-2 " style="flex-wrap: wrap;">
-                <app-zone-branch-circle [form]="PostDocument" [should_show_circle]="false"
+                <app-zone-branch-circle [form]="PostDocument" [show_circle]="false"
                                         (branchZoneCircleData)="getAllData($event)" [should_filter]="false"></app-zone-branch-circle>
 
 
