--- a/src/app/modules/loan/search-dbr/search-dbr.component.html
+++ b/src/app/modules/loan/search-dbr/search-dbr.component.html
@@ -24,7 +24,7 @@
     <div class="collapse show" id="collapseExample">
         <div class="card card-body" [formGroup]="loanSearch">
             <div class="flex" style="flex-wrap: wrap;">
-                <app-zone-branch-circle [form]="loanSearch" [should_show_circle]="false"
+                <app-zone-branch-circle [form]="loanSearch" [show_circle]="false"
                                         (branchZoneCircleData)="getAllData($event)"></app-zone-branch-circle>
 <!--                ****************Application Date*********************-->
 <!--                <div class="mx-2">-->
