--- a/src/app/modules/ndc-requests/search-ndc-list/search-ndc-list.component.html
+++ b/src/app/modules/ndc-requests/search-ndc-list/search-ndc-list.component.html
@@ -34,7 +34,7 @@
                     <div class="sm:flex grid" style="flex-wrap: wrap;">
 
 
-                        <app-zone-branch-circle [form]="ndcForm" [should_show_circle]="false"
+                        <app-zone-branch-circle [form]="ndcForm" [show_circle]="false"
                                                 (branchZoneCircleData)="getAllData($event)"></app-zone-branch-circle>
 
                         <div class="mx-2">
