--- a/src/app/modules/reschedule-cases/make-reschedule/make-reschedule.component.html
+++ b/src/app/modules/reschedule-cases/make-reschedule/make-reschedule.component.html
@@ -11,7 +11,7 @@
     <div class="" [formGroup]="mrForm">
 
         <div class="flex" style="flex-wrap: wrap;">
-            <app-zone-branch-circle [form]="mrForm" [should_show_circle]="false"
+            <app-zone-branch-circle [form]="mrForm" [show_circle]="false"
                                     (branchZoneCircleData)="getAllData($event)"></app-zone-branch-circle>
 
 
