--- a/src/app/modules/reschedule-cases/make-reschedule/upload-documents/upload-documents.component.html
+++ b/src/app/modules/reschedule-cases/make-reschedule/upload-documents/upload-documents.component.html
@@ -27,7 +27,7 @@
                     </div>
 
                     <div class="flex" style="flex-wrap: wrap;">
-                        <app-zone-branch-circle [form]="PostDocument" [should_show_circle]="false"
+                        <app-zone-branch-circle [form]="PostDocument" [show_circle]="false"
                                                 [should_filter]="false"
                                                 (branchZoneCircleData)="getAllData($event)"></app-zone-branch-circle>
                         <div class="mx-2">
