--- a/src/app/modules/village-wise-bench-marking/add-update-bench-marking/add-update-bench-marking.component.html
+++ b/src/app/modules/village-wise-bench-marking/add-update-bench-marking/add-update-bench-marking.component.html
@@ -11,7 +11,7 @@
 
         <div class="flex mt-3" style="flex-wrap: wrap;">
 
-            <app-zone-branch-circle [form]="addUpdateBenchMarkForm" [should_show_circle]="true"
+            <app-zone-branch-circle [form]="addUpdateBenchMarkForm" [show_circle]="true"
                                     (branchZoneCircleData)="getAllData($event)"></app-zone-branch-circle>
 
             <input matInput hidden formControlName="CircleCode"/>
