--- a/src/app/modules/customer/authorized-customers/authorized-customers.component.html
+++ b/src/app/modules/customer/authorized-customers/authorized-customers.component.html
@@ -21,7 +21,7 @@
     <div class="collapse show" id="collapseExample">
         <div class="card card-body">
             <div class="flex" style="flex-wrap: wrap;" [formGroup]="customerSearch">
-                <app-zone-branch-circle [form]="customerSearch" [should_show_circle]="false"
+                <app-zone-branch-circle [form]="customerSearch" [show_circle]="false"
                                         (branchZoneCircleData)="getAllData($event)"></app-zone-branch-circle>
                 <div class="mx-2">
                     <div class="flex flex-shrink-0 items-center mt-6 sm:mt-0" style="width: 225px;">
