--- a/src/app/modules/deceased-customer/deceased-cus/deceased-cus.component.html
+++ b/src/app/modules/deceased-customer/deceased-cus/deceased-cus.component.html
@@ -23,7 +23,7 @@
         <div class="collapse show" id="collapseExample">
             <div class="card card-body">
                 <div class="flex mt-1" style="flex-wrap: wrap;">
-                    <app-zone-branch-circle [form]="customerForm" [should_show_circle]="false" [should_filter]="false"
+                    <app-zone-branch-circle [form]="customerForm" [show_circle]="false" [should_filter]="false"
                                             (branchZoneCircleData)="getAllData($event)"></app-zone-branch-circle>
                     <div class="mx-2">
                         <div class="flex flex-shrink-0 items-center mt-6 sm:mt-0" style="width: 225px;">
