--- a/src/app/modules/geo-fencing/device-tracking/device-tracking.component.html
+++ b/src/app/modules/geo-fencing/device-tracking/device-tracking.component.html
@@ -24,7 +24,7 @@
     <div class="collapse show" id="collapseExample">
         <div class="card card-body">
             <div class="flex mt-1" style="flex-wrap: wrap;" [formGroup]="viewForm">
-                <app-zone-branch-circle [form]="viewForm" [should_show_circle]="true"
+                <app-zone-branch-circle [form]="viewForm" [show_circle]="true"
                                         (branchZoneCircleData)="getAllData($event)"></app-zone-branch-circle>
 
                 <div class="mx-2">
