--- a/src/app/modules/journal-voucher/jv-form/jv-form.component.html
+++ b/src/app/modules/journal-voucher/jv-form/jv-form.component.html
@@ -5,7 +5,7 @@
         <div class="flex" style="flex-wrap: wrap;">
 
 
-            <app-zone-branch-circle [form]="JvForm" [should_show_circle]="false"
+            <app-zone-branch-circle [form]="JvForm" [show_circle]="false"
                                     (branchZoneCircleData)="getAllData($event)" [should_filter]="false"></app-zone-branch-circle>
             <div class="mx-2">
                 <div class="flex flex-shrink-0 items-center mt-6 sm:mt-0" style="width: 225px;">
