--- a/src/app/modules/khaad-seed-vendor/vendor-radius/vendor-radius.component.html
+++ b/src/app/modules/khaad-seed-vendor/vendor-radius/vendor-radius.component.html
@@ -28,7 +28,7 @@
 
 
                 <div class="flex" style="flex-wrap: wrap;">
-                    <app-zone-branch-circle [form]="radiusForm" [should_show_circle]="true"
+                    <app-zone-branch-circle [form]="radiusForm" [show_circle]="true"
                                             (branchZoneCircleData)="getAllData($event)"></app-zone-branch-circle>
                     <div class="mx-2">
                         <div class="flex flex-shrink-0 items-center mt-6 sm:mt-0" style="width: 225px;">
