--- a/src/app/modules/loan-recovery/search-recovery-common/search-recovery-common.component.html
+++ b/src/app/modules/loan-recovery/search-recovery-common/search-recovery-common.component.html
@@ -43,7 +43,7 @@
                                     <div class="flex" style="flex-wrap: wrap;">
                                         <app-zone-branch-circle
                                             [form]="RecoveryForm"
-                                            [should_show_circle]="false"
+                                            [show_circle]="false"
                                             (branchZoneCircleData)="getAllData($event)"></app-zone-branch-circle>
 
                                         <div class="flex flex-shrink-0 items-center mt-6 sm:mt-0 mx-2 "
