--- a/src/app/modules/loan-utilization/search-utilization/search-utilization.component.html
+++ b/src/app/modules/loan-utilization/search-utilization/search-utilization.component.html
@@ -1,5 +1,5 @@
 <div class="block">
-    
+
 <div class=" px-10  sm:absolute sm:inset-0 flex flex-col flex-auto min-w-0 sm:overflow-auto bg-card dark:bg-transparent">
 
     <div class="row pt-3">
@@ -23,7 +23,7 @@
     <div class="collapse show" id="collapseExample">
         <div class="card card-body">
             <div class="flex" style="flex-wrap: wrap;" [formGroup]="utilizationSearch">
-                <app-zone-branch-circle [form]="utilizationSearch" [should_show_circle]="true"
+                <app-zone-branch-circle [form]="utilizationSearch" [show_circle]="true"
                                         (branchZoneCircleData)="getAllData($event)"></app-zone-branch-circle>
 
                 <div class="mx-2">
