--- a/src/app/modules/loan/cl-pending-loan/cl-pending-loan.component.html
+++ b/src/app/modules/loan/cl-pending-loan/cl-pending-loan.component.html
@@ -21,7 +21,7 @@
     <div class="collapse show" id="collapseExample">
         <div class="card card-body" [formGroup]="loanSearch">
             <div class="flex mt-1" style="flex-wrap: wrap;">
-                <app-zone-branch-circle [form]="loanSearch" [should_show_circle]="false"
+                <app-zone-branch-circle [form]="loanSearch" [show_circle]="false"
                                         (branchZoneCircleData)="getAllData($event)"></app-zone-branch-circle>
                 <div class="mx-2">
                     <div class="flex flex-shrink-0 items-center mt-6 sm:mt-0" style="width: 225px;">
