--- a/src/app/modules/loan/referback-loan-from-orr/referback-loan-uti.component.html
+++ b/src/app/modules/loan/referback-loan-from-orr/referback-loan-uti.component.html
@@ -24,7 +24,7 @@
     <div class="collapse show" id="collapseExample">
         <div class="card card-body" [formGroup]="loanSearch">
             <div class="flex" style="flex-wrap: wrap;">
-                <app-zone-branch-circle [form]="loanSearch" [should_show_circle]="false"
+                <app-zone-branch-circle [form]="loanSearch" [show_circle]="false"
                                         (branchZoneCircleData)="getAllData($event)"></app-zone-branch-circle>
                 <div class="mx-2">
                     <div class="flex flex-shrink-0 items-center mt-6 sm:mt-0" style="width: 225px;">
@@ -93,7 +93,7 @@
 
             <!-- Products list -->
                 <div class="flex flex-col flex-auto overflow-y-auto border shadow-xs rounded-sm bg-gray-50 ">
-                    <mat-table 
+                    <mat-table
                                #table
                                [dataSource]="dataSource | paginate: {itemsPerPage: itemsPerPage, currentPage: pageIndex, totalItems: totalItems} "
                                matSort
