--- a/src/app/modules/reports/early-warning-reports/early-warning-reports.component.html
+++ b/src/app/modules/reports/early-warning-reports/early-warning-reports.component.html
@@ -31,7 +31,7 @@
         <div class="card card-body">
             <div class="py-1" [formGroup]="searchCnicForm">
                 <div class="flex" style="flex-wrap: wrap;">
-                    <app-zone-branch-circle [form]="searchCnicForm" [should_show_circle]="true"
+                    <app-zone-branch-circle [form]="searchCnicForm" [show_circle]="true"
                                             [is_required_circle]="true"
                                             (branchZoneCircleData)="getAllData($event)"></app-zone-branch-circle>
 
