--- a/src/app/modules/reports/get-customer-legal-heirs/get-customer-legal-heirs.component.html
+++ b/src/app/modules/reports/get-customer-legal-heirs/get-customer-legal-heirs.component.html
@@ -32,7 +32,7 @@
         <div class="card card-body">
             <div class="py-1" [formGroup]="searchCnicForm">
                 <div class="flex" style="flex-wrap: wrap;">
-                    <app-zone-branch-circle [form]="searchCnicForm" [should_show_circle]="false" [is_required_circle]="false"
+                    <app-zone-branch-circle [form]="searchCnicForm" [show_circle]="false" [is_required_circle]="false"
                                             (branchZoneCircleData)="getAllData($event)"></app-zone-branch-circle>
 
                     <div class="mx-2">
