--- a/src/app/modules/reports/voucher-posting-day/voucher-posting-day.component.html
+++ b/src/app/modules/reports/voucher-posting-day/voucher-posting-day.component.html
@@ -32,7 +32,7 @@
 
                         <div class="col-lg-12">
                             <div class="flex" style="flex-wrap: wrap;">
-                                <app-zone-branch-circle [form]="bufricationForm" [should_show_circle]="false"
+                                <app-zone-branch-circle [form]="bufricationForm" [show_circle]="false"
                                                         [is_required_circle]="false"
                                                         (branchZoneCircleData)="getAllData($event)"></app-zone-branch-circle>
 
