--- a/src/app/modules/tour-dairy/tour-diary-rc/tour-diary-rc.component.html
+++ b/src/app/modules/tour-dairy/tour-diary-rc/tour-diary-rc.component.html
@@ -81,7 +81,7 @@
 <!--                                            <input matInput formControlName="Zone" autocomplete="off" readonly="readonly"/>-->
 <!--                                        </mat-form-field>-->
 <!--                                    </div>-->
-                                    <app-zone-branch-circle [form]="gridForm" [should_show_circle]="false"
+                                    <app-zone-branch-circle [form]="gridForm" [show_circle]="false"
                                                             [is_required_circle]="false"
                                                             (branchZoneCircleData)="getAllData($event)"></app-zone-branch-circle>
                                 </div>
@@ -345,7 +345,7 @@
 
         <div class="row">
             <div class="col-lg-12 flex  py-2 border-t">
-                <button mat-raised-button class="mr-2" color="primary" (click)="submit()">
+                <button mat-raised-button class="mr-2" color="primary" (click)="SubmitTourDiary()">
                     <mat-icon class="mr-2">check_circle</mat-icon>
                     Submit
                 </button>
