--- a/src/app/modules/user-management/eligibility-logs/eligibility-logs.component.html
+++ b/src/app/modules/user-management/eligibility-logs/eligibility-logs.component.html
@@ -22,7 +22,7 @@
     <div class="collapse show" id="collapseExample">
         <div class="card card-body">
             <div class="flex" style="flex-wrap: wrap;" [formGroup]="eligibility_log">
-                <app-zone-branch-circle [form]="eligibility_log" [should_show_circle]="true"
+                <app-zone-branch-circle [form]="eligibility_log" [show_circle]="true"
                                         (branchZoneCircleData)="getAllData($event)"></app-zone-branch-circle>
                 <div class="mx-2">
                     <div class="flex flex-shrink-0 items-center mt-6 sm:mt-0" style="width: 225px;">
