--- a/src/app/modules/user-management/users/circle-list/circle-list.component.html
+++ b/src/app/modules/user-management/users/circle-list/circle-list.component.html
@@ -30,7 +30,7 @@
 
 
             <div class="flex" style="flex-wrap: wrap;">
-                <app-zone-branch-circle [form]="create_circ_form" [should_show_circle]="false"
+                <app-zone-branch-circle [form]="create_circ_form" [show_circle]="false"
                                         (branchZoneCircleData)="getAllData($event)"></app-zone-branch-circle>
                 <div class="mx-2">
                     <div class="flex flex-shrink-0 items-center mt-6 sm:mt-0" style="width: 225px;">
