--- a/src/app/zone-branch-circle/zone-branch-circle.component.html
+++ b/src/app/zone-branch-circle/zone-branch-circle.component.html
@@ -40,7 +40,7 @@
             </mat-form-field>
         </div>
     </div>
-    <div *ngIf="should_show_circle && show_circle" class="mx-2">
+    <div *ngIf="show_circle && show_circle" class="mx-2">
         <div class="flex flex-shrink-0 items-center mt-6 sm:mt-0" style="width: 225px;">
 
             <mat-form-field class="mat-form-field-fluid w-full" appearance="outline">
