--- a/src/app/modules/tour-dairy/tour-diary-pc/tour-diary-pc.component.html
+++ b/src/app/modules/tour-dairy/tour-diary-pc/tour-diary-pc.component.html
@@ -149,6 +149,23 @@
 
                             </div>
 
+                            <div class="row mt-2 mr-1">
+                                <div class="col-lg-12 text-right">
+                                    <button *ngIf="isUpdate==false" class="ml-2 bg-green" mat-raised-button color="primary" (click)="saveTourDiary()"><mat-icon class="mr-2">save</mat-icon>Save</button>
+                                    <button *ngIf="isUpdate==true" class="ml-2 bg-green" mat-raised-button color="primary" (click)="saveTourDiary()"><mat-icon class="mr-2">save</mat-icon>Update</button>
+                                    <button mat-raised-button class="mr-2" color="primary" (click)="SubmitTourDiary()">
+                                        <mat-icon class="mr-2">check_circle</mat-icon>
+                                        Submit
+                                    </button>
+                                    <button type="button"
+                                            class="mat-focus-indicator btn bg-red-500 text-white rounded-md mx-2 mat-raised-button mat-button-base mat-danger"
+                                            mat-raised-button color="danger" (click)="onClearForm()">
+                                        <mat-icon class="mr-2"> clear_all</mat-icon>
+                                        Clear
+                                    </button>
+                                </div>
+                            </div>
+
                             <div class="col-lg-12 p-0 ist-table overflow-auto border shadow-xs rounded-sm bg-gray-50 mt-2">
                                 <table class="table">
                                     <thead>
