--- a/src/app/shared/crud/alert-dialog-confirmation/alert-dialog-confirmation.component.html
+++ b/src/app/shared/crud/alert-dialog-confirmation/alert-dialog-confirmation.component.html
@@ -11,10 +11,10 @@
 
                 <div class="col-lg-12 text-center">
                     <span class="text-green"
-                        style="font-size: 18px !important; font-weight: 600 !important; text-align:center">{{data.title}}</span>
+                          style="font-size: 18px !important; font-weight: 600 !important; text-align:center">{{data.title}}</span>
                 </div>
                 <div class="col-lg-12 text-center  mt-1">
-                    <span style="font-weight:500">{{data.description}}</span>
+                    <span style="font-weight:500" [innerHTML]="data.description"></span>
                 </div>
             </div>
         </div>
@@ -22,11 +22,14 @@
             <div class="kt-form__actions kt-form__actions--sm  mt-4" style="gap: 10%;">
                 <!--<button mat-button (click)="onNoClick()">Cancel</button>&nbsp;-->
                 <button mat-flat-button (click)="onYesClick()" class="btn btn-success  bg-green " style="width: 35%;"
-                         cdkFocusInitial [disabled]="viewLoading"> <mat-icon class="text-white text-xl mr-3">check</mat-icon> Yes
+                        cdkFocusInitial [disabled]="viewLoading">
+                    <mat-icon class="text-white text-xl mr-3">check</mat-icon>
+                    Yes
                 </button>
                 <button mat-flat-button class="button-red bg-red-500 text-white" (click)="onNoClick()"
                         style="width: 22%;margin-left: 3%;">
-                        <mat-icon class="text-white text-xl mr-3">clear</mat-icon>No
+                    <mat-icon class="text-white text-xl mr-3">clear</mat-icon>
+                    No
                 </button>&nbsp;
             </div>
         </div>
