--- a/src/app/modules/tour-plan/tour-approval-tab/tour-approval-tab.component.html
+++ b/src/app/modules/tour-plan/tour-approval-tab/tour-approval-tab.component.html
@@ -56,11 +56,14 @@
                     <tr *ngFor="let child of activity.TourPlans;let j=index">
                         <td style="width: 20%">{{getZoneName(child?.ZoneId)}}</td>
                         <td style="width: 20%">{{getBranchName(child?.BranchId)}}</td>
-                        <td style="width: 20%">{{child?.CircleCode?child?.CircleCode:"-"}}</td>
+                        <td style="width: 20%">{{child?.CircleCode ? child?.CircleCode : "-"}}</td>
                         <td style="width: 20%">{{child.VisitedDate ? dateChange(child?.VisitedDate) : '-'}}</td>
                         <td style="width: 20%">{{child.PurposeName ? child.PurposeName : '-'}}</td>
-                        <td style="width: 20%"
-                            [title]="child.Remarks">{{child.Remarks ? child.Remarks.slice(0, 10) : '-'}}</td>
+                        <td style="width: 20%" [title]="child.Remarks">
+                            <p class="remarks-box">
+                                {{child.Remarks.slice(0, 30)}}
+                            </p>
+                        </td>
                         <td style="width: 20%">{{child?.StatusName}}</td>
 
                         <td style="width: 20%">
