tour plan for approval

--- a/src/app/modules/tour-plan/signature-pad-for-tour/signature-pad-for-tour.component.html
+++ b/src/app/modules/tour-plan/signature-pad-for-tour/signature-pad-for-tour.component.html
@@ -1,7 +1,7 @@
 <div class="row">
 
     <div class="col-lg-11">
-        <h2 class="heading" *ngIf="is_referback">Specify Reason to RefferBack</h2>
+        <h2 class="heading" *ngIf="is_referback">Specify Reason to Referback</h2>
         <h2 class="heading" *ngIf="!is_referback">Add Signature to Approve Tour Plan</h2>
 
     </div>
@@ -50,7 +50,7 @@
         <button class="  mat-raised-button mat-button-base mat-primary" mat-flat-button
                 color="warn" (click)="submit()" *ngIf="is_referback">
             <mat-icon class="me-2">cancel</mat-icon>
-            Reffer Back
+            Referback
         </button>
     </div>
 
