--- a/src/app/modules/tour-plan/tour-plan/tour-plan.component.scss
+++ b/src/app/modules/tour-plan/tour-plan/tour-plan.component.scss
@@ -1,4 +1,5 @@
 /* Structure */
+
 .example-container {
     position: relative;
 }
@@ -30,7 +31,9 @@ table {
     text-align: center;
 }
 
+
 /* Column Widths */
+
 .mat-column-number,
 .mat-column-state {
     max-width: 64px;
@@ -38,4 +41,12 @@ table {
 
 .mat-column-created {
     max-width: 124px;
+}
+
+.remarks-box {
+    text-overflow: ellipsis;
+    overflow: hidden;
+    width: 160px;
+    height: 1.2em;
+    white-space: nowrap;
 }
