--- a/src/app/modules/tour-plan/view-tour-plan/view-tour-plan.component.html
+++ b/src/app/modules/tour-plan/view-tour-plan/view-tour-plan.component.html
@@ -78,7 +78,7 @@
                     </div>
                     <div class="mx-2">
                         <div class="flex flex-shrink-0 items-center mt-6 sm:mt-0" style="width: 225px;">
-                            <button (click)="searchTourPlanApproval()" type="button"
+                            <button (click)="viewTourPlan()" type="button"
                                     class=" mt-2 mat-raised-button mat-button-base bg-gray-500 kt-login__btn-primary btn-block mat-primary">
                                 <mat-icon class="mr-2">search</mat-icon>
                                 Search
