--- a/src/app/modules/tour-plan/view-tour-tab/view-tour-tab.component.html
+++ b/src/app/modules/tour-plan/view-tour-tab/view-tour-tab.component.html
@@ -48,7 +48,7 @@
                         <th>Purpose</th>
                         <th>Remarks</th>
                         <th>Status</th>
-                        <th>Actions</th>
+<!--                        <th>Actions</th>-->
 
                     </tr>
                     </thead>
@@ -66,10 +66,10 @@
                         </td>
                         <td style="width: 20%">{{child?.StatusName}}</td>
 
-                        <td style="width: 20%">
-                            <mat-checkbox *ngIf="checkBoxCheck(child.Status)"
-                                          (change)="changeCheckBox(activity,child)"></mat-checkbox>
-                        </td>
+<!--                        <td style="width: 20%">-->
+<!--                            <mat-checkbox *ngIf="checkBoxCheck(child.Status)"-->
+<!--                                          (change)="changeCheckBox(activity,child)"></mat-checkbox>-->
+<!--                        </td>-->
                     </tr>
                     </tbody>
                 </table>
