--- a/src/app/modules/tour-plan/view-tour-tab/view-tour-tab.component.html
+++ b/src/app/modules/tour-plan/view-tour-tab/view-tour-tab.component.html
@@ -17,7 +17,7 @@
                 </div>
 
 
-<!--                <div class="mr-5">-->
+                <div class="mr-5">
 <!--                    <button class="mat-raised-button mat-button-base kt-login__btn-primary btn-block mat-primary"-->
 <!--                            mat-flat-button color="primary"-->
 <!--                            (click)="$event.stopPropagation();change(activity,'A')">-->
@@ -31,10 +31,10 @@
 <!--                        <mat-icon class="me-2">close</mat-icon>-->
 <!--                        Referback-->
 <!--                    </button>-->
-<!--                    <button mat-icon-button>-->
-<!--                        <mat-icon id="{{'arrow_down_'+i}}">expand_more</mat-icon>-->
-<!--                    </button>-->
-<!--                </div>-->
+                    <button mat-icon-button>
+                        <mat-icon id="{{'arrow_down_'+i}}">expand_more</mat-icon>
+                    </button>
+                </div>
             </div>
             <div class="custom-accordion-body" id="{{'table_'+i}}"
                  style="display: none !important;">
