--- a/src/app/modules/tour-plan/create-tour-plan/create-tour-plan.component.html
+++ b/src/app/modules/tour-plan/create-tour-plan/create-tour-plan.component.html
@@ -87,8 +87,8 @@
                 <tbody>
                 <tr *ngFor="let item of tragetList | paginate: {itemsPerPage: itemsPerPage, currentPage: pageIndex, totalItems: totalItems};  let row=index;">
                     <!--                    <td>{{row + 1}}</td>-->
-                    <td>{{getZoneName(item?.ZoneId)}}</td>
-                    <td>{{getBranchName(item?.BranchId)}}</td>
+                    <td>{{item?.ZoneName ? item?.ZoneName : "-"}}</td>
+                    <td>{{item?.BranchName ? item?.BranchName : "-"}}</td>
                     <td>{{item?.CircleCode ? item?.CircleCode : "-"}}</td>
                     <td>{{dateChange(item.VisitedDate)}}</td>
                     <td>{{item?.PurposeName}}</td>
