--- a/src/app/modules/tour-plan/view-tour-tab/view-tour-tab.component.html
+++ b/src/app/modules/tour-plan/view-tour-tab/view-tour-tab.component.html
@@ -54,8 +54,8 @@
                     </thead>
                     <tbody>
                     <tr *ngFor="let child of activity.TourPlans;let j=index">
-                        <td style="width: 20%">{{getZoneName(child?.ZoneId)}}</td>
-                        <td style="width: 20%">{{getBranchName(child?.BranchId)}}</td>
+                        <td style="width: 20%">{{child?.ZoneName ? child?.ZoneName : "-"}}</td>
+                        <td style="width: 20%">{{child?.BranchName ? child?.BranchName : "-"}}</td>
                         <td style="width: 20%">{{child?.CircleCode ? child?.CircleCode : "-"}}</td>
                         <td style="width: 20%">{{child.VisitedDate ? dateChange(child?.VisitedDate) : '-'}}</td>
                         <td style="width: 20%">{{child.PurposeName ? child.PurposeName : '-'}}</td>
